--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,7 +35,7 @@ jobs:
     - name: Deploy App to Azure App Service
       uses: azure/webapps-deploy@v1
       with:
-        app-name: aplikacja-nowa1
+        app-name: aplikacja-nowa-pawel
         publish-profile: ${{secrets.AZURE_WEB_APP_PUBLISH_PROFILE}}
       
   
